--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Bienvenue
+subtitle: Retrouvez ici tout ce qu'il faut savoir sur le concours de robotique 2020
 use-site-title: true
 ---
+
+<div class="blurb">
+	<h1>EMO-Haiti lance officiellement le concours annuel de robotique #RobotChallengeHT edition 2020!</h1>
+	<p> Sur ce site, vous allez trouver toutes les informations qu'il vous faut.
+	</p>
+	<ul>
+	  <li> <a href="/info">Informations generales</a></li>
+	  <li> <a href="/eligibilite">Conditions de participation</a></li>
+	  <li><a href="/etapes">Etapes du concours</a></li>
+	  <li>Former son equipe</li>
+	  <li>Inscrire son Equipe</li>
+	  <li>Se preparer pour le test de prequalifaction</li>
+	  <li>Subir le test de prequalifaction</li>
+	  <li>Recevoir le kit de robotique</li>
+	  <li>Se familiariser avec le kit de robotique</li>
+	  <li>Presentation du challenge classique</li>
+	  <li>Construire son robot (Categorie Classique)</li>
+	  <li>Construire son robot (Categorie Universitaire)</li>
+	  <li>Tirer avantage des centres de robotique</li>
+	  <li>Tirer avantage de son Mentor</li>
+	  <li>Se preparer pour la finale</li>
+	  <li>Workshops et seminaires</li>
+	  <li>Autres ressources</li>
+	  <li>L'equipe d'organisation</li>
+	  <li>Questions et Reponses</li>
+	</ul>
+</div><!-- /.blurb 
 
 <div class="posts-list">
   {% for post in paginator.posts %}
@@ -69,4 +96,4 @@ use-site-title: true
   </li>
   {% endif %}
 </ul>
-{% endif %}
+{% endif %}-->
