Minor update to index.html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 ---
 layout: page
 title: Bienvenue
-subtitle: Retrouvez ici tout ce qu'il faut savoir sur le concours de robotique 2020
+subtitle: Retrouvez ici tout ce qu'il faut savoir sur le concours de robotique 2020 #RobotChallengeHT
 use-site-title: true
 ---
 
 <div class="blurb">
-	<h1>EMO-Haiti lance officiellement le concours annuel de robotique #RobotChallengeHT edition 2020!</h1>
-	<p> Sur ce site, vous allez trouver toutes les informations qu'il vous faut.
-	</p>
 	<ul>
 	  <li> <a href="/info">Informations generales</a></li>
 	  <li> <a href="/eligibilite">Conditions de participation</a></li>
