--- a/404.html
+++ b/404.html
@@ -6,8 +6,7 @@ permalink: /404.html
 
 <div class="text-center">
   <h1>Whoops, this page doesn't exist.</h1>
-  <h1>Move along. (404 error)</h1>
   <br/>
 
-  <img src="{{ 'img/404-southpark.jpg' | relative_url }}" />
+  <img src="{{ 'img/IMG_0773.png' | relative_url }}" />
 </div>
